2019-03-14  Richard Biener  <rguenther@suse.de>

PR target/89711
	* config/i386/i386.c (make_resolver_func): Properly set
	DECL_CONTEXT on the RESULT_DECL.
	* config/rs6000/rs6000.c (make_resolver_func): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@269683 138bc75d-0d04-0410-961f-82ee72b054a4